--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <py-script src="run.py">
-            
+            print("hello")
         </py-script>
     </body>
 </html>
