--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
     <body>
         <py-script src="run.py">
+            <a href="http://localhost:8501/" target="_self">Go to Home Page</a>
             print("hello")
         </py-script>
     </body>
