--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </title>
     </head>
     <body>
-        <py-script src="run.py">
+        <py-script src="./run.py">
             <a href="http://localhost:8501/" target="_self">Go to Home Page</a>
             print("hello")
         </py-script>
