--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
         </title>
     </head>
     <body>
-        <py-script src="./run.py">
-            <a href="http://localhost:8501/" target="_self">Go to Home Page</a>
-            print("hello")
-        </py-script>
+        <script type="py" src="./run.py"></script>
     </body>
 </html>
