--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         </title>
     </head>
     <body>
-        <script type="py" src="./run.py"></script>
+        <pyscript>
+            print("hello world")
+        </pyscript>
     </body>
 </html>
