--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         </title>
     </head>
     <body>
-        <pyscript>
+        <py-script>
             print("hello world")
-        </pyscript>
+        </py-script>
     </body>
 </html>
