--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         </title>
     </head>
     <body>
-        <py-script>
-            print("hello world")
-        </py-script>
+       <py-script>  
+       print("Hello World!")
+       </py-script>
     </body>
 </html>
