--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
-        <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-        <title>
-            Agent DevNext
-        </title>
-    </head>
-    <body>
-       <py-script>  
-       print("Hello World!")
-       </py-script>
-    </body>
+<head>
+   <meta charset="UTF-8">
+   <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+   <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+   <title>Python HTML app Hello World</title>
+</head>
+<body>
+   <py-script>  
+   print("Hello World!")
+   </py-script>
+</body>
 </html>
