--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
    <title>Python HTML app Hello World</title>
 </head>
 <body>
-   <py-script>  
-   print("Hello World!")
-   </py-script>
+        <<py-script>
+            print("Helloworld")
+        </py-script>
 </body>
 </html>
